# cv-pipeline

./: .dockerignore  .env.example  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  photo.enc  raw_history.json
.cursor/rules/: data-pipeline.mdc  frontend-standards.mdc  no-legacy.mdc  project-overview.mdc  rust-standards.mdc  timestamps.mdc
.github/workflows/: publish-cv.yml
config/: redpanda.yaml
firebase-seed/: README.md
firebase-seed/data/: availability.json  highlights.json  skills.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  theme.ts  types.ts
frontend/src/components/: EmptyState.tsx  Nav.tsx
frontend/src/pages/: About.tsx  Education.tsx  Experience.tsx  PipelineHealth.tsx  Skills.tsx
frontend/src/utils/: dates.ts
planning/: cicd.md  copy.md  data_models.md  final_plan.md  implementation_plan.md
scripts/firebase/: create-cv-reader.ps1  create-cv-reader.sh
src/: api.rs  consumer.rs  crypto.rs  db.rs  main.rs  models.rs  producer.rs
